manifests/opennms.sentinel.yaml
# @author Alejandro Galue <agalue@opennms.org>
#
# Sentinel is required only for Processing Flows and Telemetry Data.
# Using StatefulSets for Sentinels only to have a unique and immutable SENTINEL_ID.
# SENTINEL_ID is required for tracing.
#
# NOTES:
# - It is perfectly valid to have all the required configuration files on a config-map,
#   and then mount those files to the overlay directory, instead of using an initContainer.

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel
  namespace: opennms
  labels:
    app: sentinel
spec:
  serviceName: sentinel
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: sentinel
  template:
    metadata:
      labels:
        app: sentinel
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onms
      containers:
      - name: sentinel
        image: opennms/sentinel:25.2.1
        imagePullPolicy: IfNotPresent
        args:
        - -c
        ports:
        - containerPort: 8181
          name: http
        - containerPort: 8301
          name: karaf
        volumeMounts:
        - name: etc-overlay
          mountPath: /opt/sentinel-etc-overlay
        resources: # When Cassandra is used, allow enough memory for the resource cache and the ring buffer
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        #readinessProbe:
        #  tcpSocket:
        #    port: karaf
        #  initialDelaySeconds: 30
        #  periodSeconds: 10
        #livenessProbe:
        #  exec:
        #    command:
        #    - /health.sh
        #  initialDelaySeconds: 60
        #  periodSeconds: 60
        #  timeoutSeconds: 15
      volumes:
      - name: etc-overlay
        emptyDir: {}
      - name: init-scripts
        configMap:
          name: init-scripts
