manifests/opennms.minion.yaml
# @author Alejandro Galue <agalue@opennms.org>
#
# Using StatefulSets for Minions only to have a unique and immutable MINION_ID
# This Pod includes 2 containers, one for the Minion and one for the GRPC Server for NX-OS
#
# NOTES:
# - It is perfectly valid to have all the required configuration files on a config-map,
#   and then mount those files to the overlay directory, instead of using an initContainer.
#
# WARNING:
# - HorizontalPodAutoscaling is not recommended unless external intelligence is implemented,
#   to avoid zombie entries on the Minions requisitions, that can lead to outages.

---
apiVersion: v1
kind: Service
metadata:
  name: minion
  namespace: opennms
  labels:
    app: minion
spec:
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8181
    targetPort: http
  - name: traps
    protocol: UDP
    port: 161
    targetPort: traps
  - name: syslog
    protocol: UDP
    port: 514
    targetPort: syslog
  - name: netflow5
    protocol: UDP
    port: 8877
  - name: netflow9
    protocol: UDP
    port: 4729
  - name: sflow
    protocol: UDP
    port: 6343
  - name: ipfix
    protocol: UDP
    port: 4738
  - name: nxos-udp
    protocol: UDP
    port: 50001
  - name: nxos-grpc
    protocol: TCP
    port: 50002
  selector:
    app: minion

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minion
  namespace: opennms
  labels:
    app: minion
spec:
  serviceName: minion
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: minion
  template:
    metadata:
      labels:
        app: minion
    spec:
      terminationGracePeriodSeconds: 60
      dnsPolicy: None
      dnsConfig:
        nameservers:
          -  10.0.96.190
        searches:
          - opennms.svc.cluster.local
          - svc.cluster.local
          - cluster.local
      containers:
      - name: minion
        image: opennms/minion:25.2.1
        imagePullPolicy: IfNotPresent
        args:
        - -c
        ports:
        - containerPort: 1162
          protocol: UDP
          name: traps
        - containerPort: 1514
          protocol: UDP
          name: syslog
        - containerPort: 8101
          protocol: TCP
          name: http
        - containerPort: 8201
          protocol: TCP
          name: karaf
        - containerPort: 50001
          protocol: UDP
          name: nxos-udp
        - containerPort: 8877
          protocol: UDP
          name: netflow5
        - containerPort: 4729
          protocol: UDP
          name: netflow9
        - containerPort: 6343
          protocol: UDP
          name: sflow
        - containerPort: 4738
          protocol: UDP
          name: ipfix
        volumeMounts:
        - name: etc-overlay
          mountPath: /opt/minion-etc-overlay
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 1Gi
        readinessProbe:
          tcpSocket:
            port: karaf
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - /health.sh
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 15
      # Use the following only when NX-OS Telemetry over gRPC is required.
      # https://github.com/agalue/nxos-telemetry-to-kafka-go
      - name: nxos-grpc
        image: agalue/opennms-nxos-grpc-go:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50002
          protocol: TCP
          name: nxos-grpc
        readinessProbe:
          tcpSocket:
            port: nxos-grpc
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: nxos-grpc
          initialDelaySeconds: 20
          periodSeconds: 30
      volumes:
      - name: etc-overlay
        emptyDir: {}
      - name: init-scripts
        configMap:
          name: init-scripts
