manifests/external-access.yaml
# @author Alejandro Galue <agalue@opennms.org>
#
# With Kops, the dns-controller will automatically create entries on Route53 when --watch-ingress=true is applied.
# With EKS, GKE and AKS, external-dns will create entries on Route53.
#
# WARNING:
# Please use your own domains. This is not intended to be used by any user.

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: opennms
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: route
    ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  tls:
    - secretName: opennms-ingress-cert
      hosts:
        - onms.flows.cloud.opennms.com
        - onmsui.flows.cloud.opennms.com
        - cassandra-reaper.flows.cloud.opennms.com
        - grafana.flows.cloud.opennms.com
        - hasura.flows.cloud.opennms.com
        - kibana.flows.cloud.opennms.com
        - elastichq.flows.cloud.opennms.com
        - kafka-manager.flows.cloud.opennms.com
        - tracing.flows.cloud.opennms.com
  rules:
    - host: onms.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: opennms-core
              servicePort: 8980
    - host: cassandra-reaper.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cassandra-reaper
              servicePort: 8080
    - host: grafana.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
    - host: hasura.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hasura
              servicePort: 8080
    - host: kafka-manager.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kafka-manager
              servicePort: 9000
    - host: kibana.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
    - host: elastichq.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elastichq
              servicePort: 5000
    - host: onmsui.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: opennms-ui
              servicePort: 8980
          - path: /opennms/nrt
            backend:
              serviceName: opennms-core
              servicePort: 8980
    - host: tracing.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: onms-tracing-query
              servicePort: 16686

# The following is the entry point needed for external Minions
---
apiVersion: v1
kind: Service
metadata:
  name: ext-kafka
  namespace: opennms
  labels:
    app: kafka
  annotations:
    # For Kops
    dns.alpha.kubernetes.io/external: kafka.flows.cloud.opennms.com.
    # For External-DNS
    external-dns.alpha.kubernetes.io/hostname: kafka.flows.cloud.opennms.com.
spec:
  type: LoadBalancer
  ports:
  - port: 9094
    targetPort: 9094
  selector:
    app: kafka
